--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -35,6 +35,10 @@
         border-radius: 15px;
     }
 
+    /* .text-secondary{
+        @applay block 
+    } */
+
     .btn {
         @apply block px-6 py-3 rounded-lg font-semibold cursor-pointer hover:shadow-md duration-200;
     }
