Update Home page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,16 +43,16 @@
         @apply block px-6 py-3 rounded-lg font-semibold cursor-pointer hover:shadow-md duration-200;
     }
 
-    .btn-accent-blue {
-        @apply bg-accent-blue-400 hover:bg-accent-blue-500 text-white;
+    .btn-accent-gray {
+        @apply bg-accent-gray-400 hover:bg-[#ccc] text-white;
     }
 
     .btn-primary {
-        @apply bg-accent-green text-white hover:text-accent-green hover:bg-transparent border hover:border-accent-green;
+        @apply bg-red-400 text-white hover:text-red-400 hover:bg-transparent border hover:border-red-400;
     }
 
     .btn-accent-white-filled {
-        @apply bg-white text-accent-green border hover:border-white hover:text-white hover:bg-transparent;
+        @apply bg-white text-accent-red border hover:border-white hover:text-white hover:bg-transparent;
     }
 
     .animate-rotate{
