--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -39,16 +39,16 @@
         @apply block px-6 py-3 rounded-lg font-semibold cursor-pointer hover:shadow-md duration-200;
     }
 
-    .btn-accent-blue {
-        @apply bg-accent-blue-400 hover:bg-accent-blue-500 text-white;
+    .btn-accent-gray {
+        @apply bg-accent-gray-400 hover:bg-accent-gray-500 text-white;
     }
 
     .btn-primary {
-        @apply bg-accent-green text-white hover:text-accent-green hover:bg-transparent border hover:border-accent-green;
+        @apply bg-accent-red text-white hover:text-accent-red hover:bg-transparent border hover:border-accent-red;
     }
 
     .btn-accent-white-filled {
-        @apply bg-white text-accent-green border hover:border-white hover:text-white hover:bg-transparent;
+        @apply bg-white text-accent-red border hover:border-white hover:text-white hover:bg-transparent;
     }
 
     .animate-rotate{
