--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,12 @@
 @tailwind utilities;
 
 
+
+/* 
+@import 'lightgallery/scss/lightgallery.scss';
+@import 'lightgallery/scss/lg-zoom.scss'; */
+
+
 * {
     font-family: "Raleway", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
