--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,13 @@
 /*@import '@fontsource/raleway/200.css';*/
-@import '@fontsource/raleway/400.css';
+/* @import '@fontsource/raleway/400.css';
 @import '@fontsource/raleway/600.css';
-@import '@fontsource/raleway/700.css';
+@import '@fontsource/raleway/700.css'; */
 /*@import '@fontsource/raleway/800.css';*/
 /*@import '@fontsource/raleway/900.css';*/
+
+@import '@fontsource/overpass';
+@import "@fontsource/overpass/400.css";
+@import "@fontsource/overpass/400-italic.css";
 
 @import 'swiper/css/bundle';
 
@@ -21,7 +25,7 @@
 
 
 * {
-    font-family: "Raleway", system-ui, -apple-system, BlinkMacSystemFont,
+    font-family: "Overpass", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
 }
