--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -124,3 +124,35 @@
     height: auto!important;
     margin-top: 7rem;
 }
+
+@media (max-width: 500.98px) { 
+    .header-swiper{
+        width: 20rem!important;
+    }
+ }
+
+@media (max-width: 575.98px) { 
+    .header-swiper{
+        width: 32rem!important;
+    }
+ }
+
+
+@media (max-width: 767.98px) { 
+  
+}
+
+
+@media (max-width: 991.98px) { 
+    
+ }
+
+
+@media (max-width: 1199.98px) { 
+    
+ }
+
+
+@media (max-width: 1399.98px) { 
+    
+ }
