--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -5,3 +5,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* .fi-topbar > nav { 
+    @apply !bg-inherit ring-0 shadow-none;
+}
+ 
+.fi-sidebar-header {
+    @apply !bg-inherit ring-0 shadow-none;
+}  */
