--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,7 @@
     font-family: "Overpass", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
+    font-weight: 500!important;
 }
 
 :root {
