--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.splide__arrow {
+  display: none;
+}
+
 
 * {
     font-family: "Overpass", system-ui, -apple-system, BlinkMacSystemFont,
@@ -29,6 +33,19 @@
 .fi-sidebar-header {
     @apply !bg-inherit ring-0 shadow-none;
 } 
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+  }
+}
+
 
 
 [x-cloak] {
